# Alacrity

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc.js  .release-please-manifest.json  CHANGELOG.md  README.md  README_en.md  app.vue  eslint.config.js  i18n.config.ts  index.html  nuxt.config.ts  package.json  release-please-config.json  tsconfig.json  uno.config.ts  vite.config.ts
.husky/: pre-commit
assets/: index.less
components/: alacrity-page.vue  content-page.vue  input-output-layout.vue  introduction-guide.vue  option-layout.vue  plugin-card-list.vue  plugin-card.vue  plugin-name.vue  search-dialog.vue  upload-button.vue
composables/: query-table-data.ts  use-content-route.ts  use-generate-qrcode.ts  use-generate-uuid.ts  use-parse-url.ts  use-plugin-id.ts  use-string-operations.ts  use-validate-uuid.ts
layouts/: default.vue
locales/: index.ts
middleware/: remove-redundant-textarea.global.ts
pages/: disabled.vue  favorite.vue  index.vue  settings.vue
plugins/: 001.base64-encode-decode.ts  002.hash-file.ts  003.hash-text.ts  004.local-websocket-client.ts  005.uuid-generator.ts  006.git-cheat-sheet.ts  007.http-status-code.ts  008.password-strength.ts  009.uuid-validator.ts  010.qrcode-generator.ts  011.url-parser.ts  012.case-converter.ts  013.get-random-port.ts  014.roman-converter.ts  015.parse-mime-type.ts
src/: App.vue  main.ts  shims-vue.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs
src-tauri/src/alacrity_plugins/: mod.rs  request_headers.rs
stores/: alacrity-config.ts  alacrity-plugins.ts  collapsed.ts  disabled-config.ts  disabled.ts  favorite-config.ts  favorite-store.ts  favorite.ts  guide.ts  locale-config.ts  locale-store.ts  locale.ts  menu-group.ts  plugins-store.ts  plugins.ts  search-info.ts  search-store.ts  search.ts  side-menu-groups.ts  tauri-store.ts  theme-config.ts  theme-store.ts  theme.ts
types/: alacrity-config.ts  alacrity-locale.ts  alacrity-plugin.ts  alacrity-theme.ts  search-info.ts  table-data.ts
utils/: general-string-format.ts  get-plugin-id.ts  get-plugin-route.ts  map-locale.ts  plugin-id-from-route.ts  t-group-name.ts  (+3 more)
(+186 files in other folders)
