[package]
name = "alacrity"
version = "0.0.0"
description = "A toolbox app built with Truri and Vue."
authors = ["origin-coding"]
license = "GPL-3"
repository = "https://github.com/origin-coding/alacrity"
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = ["path-all", "fs-all", "dialog-all", "clipboard-all", "shell-open"] }
curl = "0.4.44"
sys-locale = "0.3.1"
# Tauri plugins
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is a URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
