[package]
name = "alacrity"
version = "0.0.0"
description = "A toolbox app built with Truri and Vue."
authors = ["origin-coding"]
license = "GPL-3"
repository = "https://github.com/origin-coding/alacrity"
edition = "2021"


[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc", features = [] }
# Tauri plugins
tauri-plugin-single-instance = { version = "2.0.0-rc" }
tauri-plugin-store = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-fs = "2.0.0-rc"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is a URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
